<resources>
    <string name="app_name">Hangman</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="d">d</string>
    <string name="e">e</string>
    <string name="f">f</string>
    <string name="g">g</string>
    <string name="h">h</string>
    <string name="i">i</string>
    <string name="j">j</string>
    <string name="delete">Delete</string>
    <string name="enter">Enter</string>
    <string name="z">z</string>
    <string name="k">k</string>
    <string name="l">l</string>
    <string name="m">m</string>
    <string name="n">n</string>
    <string name="o">o</string>
    <string name="p">p</string>
    <string name="q">q</string>
    <string name="r">r</string>
    <string name="s">s</string>
    <string name="t">t</string>
    <string name="u">u</string>
    <string name="v">v</string>
    <string name="w">w</string>
    <string name="x">x</string>
    <string name="y">y</string>
    <string name="answer">Answer</string>
    <string name="hint">Hint:</string>
    <string name="choose_a_letter">Choose a letter:</string>
    <string name="food">Food</string>
    <string name="its_red">It\'s red</string>
    <string name="teachers_love_them">Teachers love them</string>
    <string name="seen_at_night">Seen at night</string>
    <string name="also_a_shape">Also a shape</string>
    <string name="twinkle_twinkle">Twinkle twinkle</string>
    <string name="trees_drop_them">Trees drop them</string>
    <string name="produces_seeds">Produces seeds</string>
    <string name="pointy">Pointy</string>
    <string name="color">Color</string>
    <string name="taylor_swift_album">Taylor Swift album</string>
    <string name="primary_color">Primary color</string>
    <string name="like_from_a_bulb">Like from a bulb</string>
    <string name="not_heavy">Not heavy</string>
    <string name="dim_or_bright">Dim or bright</string>
    <string name="new_game">New Game</string>
    <string name="state_of_the_hangman">State of the Hangman</string>
    <string name="guess_a_letter">Guess a letter</string>
</resources>